Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54492

Charts Callout Example does not properly move the callouts when chart is resized

    XMLWordPrintable

Details

    • c6d72bb6ebd860a38aac2e557bca330b0d5b1926

    Description

      When putting some callouts in the example, and resizing the window (so that the chart is resized), the callouts are not moved and they point to non-existant positions.

      Steps to reproduce:

      • Run Callout - example
      • Put some callouts on the chart
      • Resize the window so that the size of the chart changes
      • EXPECTED: Callouts still point to the positions that they were set to
      • ACTUAL: Callouts point to same coordinates as before resizing, so they no longer point to chart lines

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            jussi_witick Jussi Witick
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes