Fix resize handling in Callout example

Callouts are now positioned correctly when the chart is resized.

Task-number: QTBUG-54492
Change-Id: I5660eb48e58348cc2d649b48965c342488294ae4
Reviewed-by: Mika Salmela <mika.salmela@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>