examples/charts/callout/callout.h
@@ -22,6 +22,7 @@
 #ifndef CALLOUT_H
 #define CALLOUT_H
 
+#include <QtCharts/QChartGlobal>
 #include <QtWidgets/QGraphicsItem>
 #include <QtGui/QFont>
 
@@ -29,13 +30,20 @@ QT_BEGIN_NAMESPACE
 class QGraphicsSceneMouseEvent;
 QT_END_NAMESPACE
 
+QT_CHARTS_BEGIN_NAMESPACE
+class QChart;
+QT_CHARTS_END_NAMESPACE
+
+QT_CHARTS_USE_NAMESPACE
+
 class Callout : public QGraphicsItem
 {
 public:
-    Callout(QGraphicsItem * parent = 0);
+    Callout(QChart *parent);
 
     void setText(const QString &text);
     void setAnchor(QPointF point);
+    void updateGeometry();
 
     QRectF boundingRect() const;
     void paint(QPainter *painter, const QStyleOptionGraphicsItem *option,QWidget *widget);
@@ -50,6 +58,7 @@ private:
     QRectF m_rect;
     QPointF m_anchor;
     QFont m_font;
+    QChart *m_chart;
 };
 
 #endif // CALLOUT_H
